Correcting checkstyle issues reported for Identity provider..

--- a/carbon-is/components/identity-provider/org.wso2.carbon.identity.provider/pom.xml
+++ b/carbon-is/components/identity-provider/org.wso2.carbon.identity.provider/pom.xml
@@ -19,9 +19,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>identity-provider</artifactId>
         <groupId>org.wso2.carbon.identity.provider</groupId>
+        <artifactId>identity-provider</artifactId>
         <version>6-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -240,7 +241,7 @@
         requiredService="org.wso2.carbon.identity.common.IdentityCommonService"
     </carbon.component-->
 
-    <dsannotations>*</dsannotations>
+    <!--<dsannotations>*</dsannotations>-->
 
     <properties>
         <private.package>org.wso2.carbon.identity.provider.internal</private.package>
