--- a/carbon-is/components/identity-provider/pom.xml
+++ b/carbon-is/components/identity-provider/pom.xml
@@ -19,9 +19,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>wso2</artifactId>
-        <groupId>org.wso2</groupId>
-        <version>6-SNAPSHOT</version>
+        <groupId>org.wso2.is</groupId>
+        <artifactId>org.wso2.carbon.identity</artifactId>
+        <relativePath>../../pom.xml</relativePath>
+        <version>6.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.wso2.carbon.identity.provider</groupId>
