--- a/portal/user/osgi-service/org.wso2.is.portal.user.client.challengequestion/pom.xml
+++ b/portal/user/osgi-service/org.wso2.is.portal.user.client.challengequestion/pom.xml
@@ -31,7 +31,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <name>WSO2 User Profile Bundle</name>
+    <name>WSO2 User Profile Bundle - Challenge Questions</name>
     <description>This feature contains the OSGi service for User profile</description>
     <url>http://wso2.org</url>
 
@@ -79,13 +79,13 @@
                             org.slf4j.*;version="${slf4j.import.version.range}",
                             org.wso2.carbon.security.caas.user.core.*;version="${carbon.security.caas.version}"
                         </Import-Package>
-                        <Private-Package>org.wso2.carbon.user.profile.internal.*</Private-Package>
+                        <Private-Package>org.wso2.is.portal.user.client.challenge.question.internal.*</Private-Package>
                         <Export-Package>
-                            !org.wso2.carbon.user.profile.internal.*,
-                            org.wso2.carbon.user.profile.*;version="${version}"
+                            !org.wso2.is.portal.user.client.challenge.question.internal.*,
+                            org.wso2.is.portal.user.client.challenge.question.*;version="${project.version}"
                         </Export-Package>
                         <Bundle-Activator>
-                            org.wso2.carbon.user.profile.internal.Activator
+                            org.wso2.is.portal.user.client.challenge.question.internal.Activator
                         </Bundle-Activator>
                     </instructions>
                 </configuration>
