--- a/pom.xml
+++ b/pom.xml
@@ -1139,6 +1139,16 @@
                 <artifactId>org.wso2.carbon.tenant.mgt.stub</artifactId>
                 <version>${carbon.multitenancy.version}</version>
             </dependency>
+
+            <!--dependencies from this point is used in p2 profile gen, added here to get them updated along with
+            versions plugin (version plugin only reads the dependencies in dependencyManagement,
+            and dependenies section-->
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity.application.authz.xacml</groupId>
+                <artifactId>org.wso2.carbon.identity.application.authz.xacml.server.feature</artifactId>
+                <version>${identity.app.authz.xacml.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -1205,7 +1215,7 @@
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.5.8</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.5.11-SNAPSHOT</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.1.5</identity.carbon.auth.saml2.version>
@@ -1238,6 +1248,7 @@
         <org.wso2.carbon.identity.auth.version>0.1.0</org.wso2.carbon.identity.auth.version>
         <identity.event.handler.account.lock.version>1.0.0</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>0.1.3</identity.event.handler.notification.version>
+        <identity.app.authz.xacml.version>0.1.0-SNAPSHOT</identity.app.authz.xacml.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
         <!--<identity.userstore.cassandra.version>5.1.1</identity.userstore.cassandra.version>-->
