--- a/carbon-is/components/identity-provider/org.wso2.carbon.identity.provider/pom.xml
+++ b/carbon-is/components/identity-provider/org.wso2.carbon.identity.provider/pom.xml
@@ -244,6 +244,8 @@
     <!--<dsannotations>*</dsannotations>-->
 
     <properties>
+        <mavan.findbugsplugin.exclude.file>findbugs-exclude.xml</mavan.findbugsplugin.exclude.file>
+        <maven.checkstyleplugin.excludes>org/wso2/carbon/identity/**/*</maven.checkstyleplugin.excludes>
         <private.package>org.wso2.carbon.identity.provider.internal</private.package>
         <export.package>
             !org.wso2.carbon.identity.provider.internal,
